--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,11 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/highlight/styles/zenburn.css">
+    <script src="{{site.baseurl}}/assets/highlight/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
+
     <title> {{ page.title }} </title>
   </head>
 
